scripts/slurm_outputs_scripts/ablations_controlled_3_26543187.log
3
Traceback (most recent call last):
  File "train_hotswapped_lift.py", line 16, in <module>
    from test_lift import test
  File "/net/coxfs01/srv/export/coxfs01/pfister_lab2/share_root/Lab/spandan/contextual_domain_adaptation/WhenPigsFlyContext/test_lift.py", line 21
    def test(model, annotations_file, imagedir, outdir, cfg, outname="test", epoch=None, record_individual_scores=False, print_batch_metrics=False,blur_strength):
             ^
SyntaxError: non-default argument follows default argument
